CS59_Intellij/tests/invalid/semantics/integerlogic.dsl
/* integers in boolean logic */
i = 1 And 2.